added event-listner for localStorage in JS

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,8 +33,8 @@
     <!-- Example of a past time block. The "past" class adds a gray background color. -->
     <div id="hour-9" class="row time-block past">
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="9AM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn9">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -42,8 +42,8 @@
     <!-- Example of a a present time block. The "present" class adds a red background color. -->
     <div id="hour-10" class="row time-block present">
       <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="10AM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn10">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -51,50 +51,50 @@
     <!-- Example of a future time block. The "future" class adds a green background color. -->
     <div id="hour-11" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="11AM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn11">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-12" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="12PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn12">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-1" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="1PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn1">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-2" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="2PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn2">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-3" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="3PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn3">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-4" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="4PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn4">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
     <div id="hour-5" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <textarea class="col-8 col-md-10 description" rows="3" id="5PM"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="save-Btn5">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -103,6 +103,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+
 
     <script src="script.js"></script>
 </body>
