--- a/index.html
+++ b/index.html
@@ -20,17 +20,8 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container-lg px-5">
-    <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
 
-    <!-- Example of a past time block. The "past" class adds a gray background color. -->
+    <!--time block -9AM -->
     <div id="hour-9" class="row time-block past">
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="9AM"> </textarea>
@@ -39,7 +30,7 @@
       </button>
     </div>
 
-    <!-- Example of a a present time block. The "present" class adds a red background color. -->
+    <!--time block -10AM -->
     <div id="hour-10" class="row time-block present">
       <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="10AM"> </textarea>
@@ -48,7 +39,7 @@
       </button>
     </div>
 
-    <!-- Example of a future time block. The "future" class adds a green background color. -->
+    <!--time block -11AM -->
     <div id="hour-11" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="11AM"> </textarea>
@@ -56,6 +47,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -12PM -->
     <div id="hour-12" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="12PM"> </textarea>
@@ -63,6 +56,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -1PM -->
     <div id="hour-1" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="1PM"> </textarea>
@@ -70,6 +65,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -2PM -->
     <div id="hour-2" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="2PM"> </textarea>
@@ -77,6 +74,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -3PM -->
     <div id="hour-3" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="3PM"> </textarea>
@@ -84,6 +83,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -4PM -->
     <div id="hour-4" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="4PM"> </textarea>
@@ -91,6 +92,8 @@
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
+
+    <!--time block -5PM -->
     <div id="hour-5" class="row time-block future">
       <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
       <textarea class="col-8 col-md-10 description" rows="3" id="5PM"> </textarea>
@@ -99,7 +102,7 @@
       </button>
     </div>
 
-
+    <!-- Added link to the jQuery library -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
